# termdemo

./: Cargo.toml  LICENSE  README.md
packaging/: build-packages.sh
packaging/arch/: PKGBUILD
packaging/deb/: control  copyright
src/: app.rs  effect.rs  framebuffer.rs  input.rs  main.rs  scene.rs  sequencer.rs  transition.rs  ui.rs
src/effects/: aurora.rs  boids.rs  boingball.rs  bumpmapping.rs  cellular.rs  clothsim.rs  copperbars.rs  copperflag.rs  cubefield.rs  dotsphere.rs  dottunnel.rs  filledvector.rs  fire.rs  fireworks.rs  flowfield.rs  fluidsim.rs  fountain.rs  fractalzoom.rs  galaxy.rs  gameoflife.rs  glenz.rs  interference.rs  julia.rs  kaleidoscope.rs  kefrensbars.rs  lavalamp.rs  lens.rs  lightning.rs  lissajous.rs  lsystem.rs  mandelbrot.rs  matrix.rs  metaballs.rs  mod.rs  moire.rs  morph.rs  neon.rs  oscilloscope.rs  parallax.rs  pendulum.rs  (+24 more)
